argocd/media-server/books/manifests/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: books
spec:
  endpointSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - bookorbit
          - shelfmark
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
            - port: "8084"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: authentik
            k8s:app.kubernetes.io/name: authentik
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: books
            app: bookorbit
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: books
            app: shelfmark
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
            - port: "8084"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: books
            k8s:cnpg.io/cluster: bookorbit-db
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: books
            app: bookorbit
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: books
            app: shelfmark
      toPorts:
        - ports:
            - port: "8084"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: authentik
            k8s:app.kubernetes.io/name: authentik
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: bookorbit-db
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: bookorbit-db
  ingress:
    - fromEndpoints:
        - matchExpressions:
            - key: app
              operator: In
              values:
                - bookorbit
                - shelfmark
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: cnpg
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: books
            k8s:cnpg.io/podRole: instance
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
            - port: "8000"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: books
            k8s:cnpg.io/podRole: instance
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEntities:
        - kube-apiserver
        - host
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: cnpg
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
